--- a/public/css/sidebar.scss
+++ b/public/css/sidebar.scss
@@ -1,6 +1,6 @@
 // https://getbootstrap.com/docs/4.1/examples/dashboard/
 
-$sidebar-width: 161px; // Line up with Play button
+$sidebar-width: 158px; // Line up with Play button
 
 .sidebar {
 	display: none;
